@@ -46,10 +46,10 @@
  *   TestUpcallDeopt
  */
 
-import java.lang.foreign.Addressable;
+import java.lang.foreign.Arena;
 import java.lang.foreign.Linker;
 import java.lang.foreign.FunctionDescriptor;
-import java.lang.foreign.MemorySession;
+import java.lang.foreign.MemorySegment;
 
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.MethodType;
@@ -85,8 +85,8 @@ public class TestUpcallDeopt extends NativeTestHelper {
     // we need to deoptimize through an uncommon trap in the callee of the optimized upcall stub
     // that is created when calling upcallStub below
     public static void main(String[] args) throws Throwable {
-        try (MemorySession session = MemorySession.openConfined()) {
-            Addressable stub = linker.upcallStub(MH_m, FunctionDescriptor.ofVoid(C_INT, C_INT, C_INT, C_INT), session);
+        try (Arena arena = Arena.openConfined()) {
+            MemorySegment stub = linker.upcallStub(MH_m, FunctionDescriptor.ofVoid(C_INT, C_INT, C_INT, C_INT), arena.scope());
             armed = false;
             for (int i = 0; i < 20_000; i++) {
                 payload(stub); // warmup
@@ -97,8 +97,8 @@ public class TestUpcallDeopt extends NativeTestHelper {
         }
     }
 
-    static void payload(Addressable cb) throws Throwable {
-        MH_foo.invokeExact((Addressable) cb, 0, 1, 2, 3);
+    static void payload(MemorySegment cb) throws Throwable {
+        MH_foo.invokeExact(cb, 0, 1, 2, 3);
         Reference.reachabilityFence(cb); // keep oop alive across call
     }
 
